# ProteinCraft-Tulip

./: CMakeLists.txt  NEWS  README.md  cmd_build.sh  header.txt  travis.yml  tulip-config.in
doc/: CMakeLists.txt
doc/developer/: CMakeLists.txt  conf.py.in  doc_guides.rst  graph_format.rst  installation.rst  plugin_development.rst  tulip_libogl.txt  tulip_tutorial.rst
doc/developer/_documents/: ListenerClass.cpp
doc/doxygen/: doxygen_groups.h  tulip.doxyfile.in
doc/python/: CMakeLists.txt  apichanges.rst  conf.py.in  creatingvisualizations.rst  genSphinxDoc.cmake  gen_plugins_doc.py  gettingstarted.rst  graphalgorithms.rst  graphdatastorage.rst  graphobservation.rst  index.rst  pythonplugins.rst  tabulate.py  tulipreference.rst
doc/user/: CMakeLists.txt  algorithm.rst  conf.py.in  functions.rst  gui.rst  index.rst  tutorial_beginner.rst  tutorial_intermediate.rst  workspace.rst
plugins/clustering/: CMakeLists.txt  CliqueEnumeration.cpp  CliqueEnumeration.h  ConvolutionClustering.cpp  ConvolutionClustering.h  ConvolutionClusteringSetup.cpp  ConvolutionClusteringSetup.h  ConvolutionClusteringSetup.ui  EqualValueClustering.cpp  EqualValueClustering.h  HierarchicalClustering.cpp  HierarchicalClustering.h  QuotientClustering.cpp  StrengthClustering.cpp  StrengthClustering.h
plugins/clustering/Delaunay/: CMakeLists.txt  DelaunayTriangulation.cpp  VoronoiDiagram.cpp
plugins/export/: CMakeLists.txt  CSVExport.cpp  CSVExport.h  GMLExport.cpp
plugins/export/SVGExport/: CMakeLists.txt  ExportInterface.cpp  ExportInterface.h  ExportSvg.cpp  ExportSvg.h  ReadGraph.cpp  ReadGraph.h  Shape.cpp  Shape.h  SvgExportPlugin.cpp
plugins/general/BidirectionalEdges/: BidirectionalEdges.cpp  (+1 more)
plugins/import/: AdjacencyMatrixImport.cpp  CMakeLists.txt  CompleteGraph.cpp  CompleteTree.cpp  ERRandomGraph.cpp  EmptyGraph.cpp  FileSystem.cpp  GEXFImport.cpp  GMLImport.cpp  GMLParser.h  Grid.cpp  ImportPajek.cpp  ImportTGF.cpp  ImportUCINET.cpp  PlanarGraph.cpp  RandomGraph.cpp  RandomTree.cpp  RandomTreeGeneral.cpp  SmallWorldGraph.cpp  WebImport.cpp  WebImport.h  dotImport.cpp  dotImportCLUT.h  dotImportLexer.h  dotImportParser.h  dotImportParser.y
plugins/interactor/: CMakeLists.txt  InteractorAddEdge.cpp  InteractorDeleteElement.cpp  InteractorEditEdgeBends.cpp  InteractorGetInformation.cpp  InteractorRectangleZoom.cpp  InteractorSelection.cpp  InteractorSelectionModifier.cpp
plugins/layout/: AlignNodes.cpp  BubblePack.cpp  BubbleTree.cpp  BubbleTree.h  CMakeLists.txt  Circular.cpp  Circular.h  ConeTreeExtended.cpp  ConeTreeExtended.h  ConnectedComponentPacking.cpp  ConnectedComponentPacking.h  DatasetTools.cpp  DatasetTools.h  Dendrogram.cpp  Dendrogram.h  EdgeSeparation.cpp  GEMLayout.cpp  GEMLayout.h  HierarchicalGraph.cpp  HierarchicalGraph.h  ImprovedWalker.cpp  ImprovedWalker.h  MixedModel.cpp  MixedModel.h  OrientableConstants.h  OrientableCoord.cpp  OrientableCoord.h  OrientableLayout.cpp  OrientableLayout.h  OrientableLayoutInterface.h  OrientableSize.cpp  OrientableSize.h  OrientableSizeProxy.cpp  OrientableSizeProxy.h  Orientation.cpp  Orientation.h  OrthoTree.cpp  PerfectLayout.cpp  PolyominoPacking.cpp  Random.cpp  (+17 more)
plugins/metric/: BetweennessCentrality.cpp  BiconnectedComponent.cpp  CMakeLists.txt  ClusterMetric.cpp  ClusterMetric.h  ConnectedComponent.cpp  ConnectedComponent.h  DagLevelMetric.cpp  DagLevelMetric.h  DegreeMetric.cpp  DegreeMetric.h  DepthMetric.cpp  DepthMetric.h  Eccentricity.cpp  Eccentricity.h  IdMetric.cpp  IdMetric.h  KCores.cpp  LeafMetric.cpp  LeafMetric.h  LinkCommunities.cpp  LouvainClustering.cpp  MCLClustering.cpp  NeighborhoodMetric.cpp  NodeMetric.cpp  NodeMetric.h  PageRank.cpp  PathLengthMetric.cpp  PathLengthMetric.h  Random.cpp  Random.h  SecondOrderCentrality.cpp  StrahlerMetric.cpp  StrahlerMetric.h  StrengthMetric.cpp  StrengthMetric.h  StrongComponent.cpp  StrongComponent.h  WelshPowell.cpp
plugins/selection/: CMakeLists.txt  InducedSubGraphSelection.cpp  InducedSubGraphSelection.h  Kruskal.cpp  Kruskal.h  LoopSelection.cpp  LoopSelection.h  MakeSelectionGraph.cpp  MakeSelectionGraph.h  MultipleEdgeSelection.cpp  MultipleEdgeSelection.h  ReachableSubGraphSelection.cpp  ReachableSubGraphSelection.h  SpanningDagSelection.cpp  SpanningDagSelection.h  SpanningTreeSelection.cpp  SpanningTreeSelection.h
plugins/sizes/: AutoSize.cpp  CMakeLists.txt  SizeMapping.cpp
plugins/test/: Acyclic.cpp  Biconnected.cpp  CMakeLists.txt  Connected.cpp  Outerplanar.cpp  Planarity.cpp  Simple.cpp  Tree.cpp  Triconnected.cpp
software/crash_handling/: BfdWrapper.cpp  BfdWrapper.h  CMakeLists.txt  CrashHandling.cpp  CrashHandling.h  StackWalker.cpp  StackWalker.h  UnixSignalInterposer.cpp  UnixSignalInterposer.h
software/tulip/: CMakeLists.txt
tests/: CMakeLists.txt
tests/gui/: auto_sizing.tlp  bidirectional_edges.tlp  bidirectional_edges.xns  bubble_pack.tlp  clustering_clique_enumeration.tlp  clustering_hierarchical.tlp  clustering_hierarchical.xns  clustering_quotient_clustering.tlp  clustering_quotient_clustering.xns  enumerated_color_mapping.tlp  export_gml_file.tlp  export_json_file.tlp  export_tlp_gz_file.tlp  export_tlp_gz_file.xns  export_tlpb_file.tlp  export_tlpb_gz_file.tlp  export_tlpbz_file.tlp  export_tlpbz_file.xns  export_tlpz_file.tlp  general_curve_edges.tlp  general_edge_bundling.tlp  general_reverse_edges.tlp  geographic_view.tlp  geographic_view.xns  group_inout.tlp  group_inout.xns  group_test.tlp  group_unique.tlp  group_unique.xns  histogram_view.tlp  histogram_view.xns  import_adjacency_matrix.tlp  import_bibtex.tlp  import_bibtex.xns  import_complete_general_graph.tlp  import_complete_general_graph.xns  import_complete_tree.tlp  import_complete_tree.xns  import_csv.xns  import_csv_decimal_mark.tlp  (+182 more)
tests/include/: CppUnitIncludes.h
tests/plugins/: BasicLayoutTest.cpp  BasicLayoutTest.h  BasicMetricTest.cpp  BasicMetricTest.h  BasicPluginsTest.cpp  BasicPluginsTest.h  pluginsloadingtest.cpp  pluginstest.cpp
tests/python/: test_graph_properties.py  test_graph_structure.py  test_plugin_registration_and_parameters.py
(+496 files in other folders)
